--- a/app/styles/utils.scss
+++ b/app/styles/utils.scss
@@ -54,3 +54,13 @@ h6 .small-text-fade {
 .u-margin-bottom-large {
   margin-bottom: 40px;
 }
+
+.u-rel-top-xxsmall {
+  position: relative;
+  top: 2px;
+}
+
+.u-rel-top-small {
+  position: relative;
+  top: 9px;
+}
